--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,3 +1,9 @@
-h1 {
-  color: red;
-}
+// @import "font.scss";
+@import "var.scss";
+@import "utils.scss";
+@import "mixins.scss";
+@import "fonts.scss";
+@import "blocks/page-body.scss";
+@import "blocks/page-header.scss";
+@import "blocks/main-nav.scss";
+@import "blocks/start.scss";
