--- a/source/sass/blocks/start.scss
+++ b/source/sass/blocks/start.scss
@@ -1,6 +1,70 @@
 .start {
-  background: $dark-gray url("../../img/bg-main.png") no-repeat center -100px;
-  background-size: 100% 878px;
-  min-height: 878px;
-  z-index: -1;
+  margin: 0 auto;
+  max-width: 1410px;
+}
+
+.start__text {
+  width: 80%;
+  color: $white;
+}
+
+.start__text-head {
+  margin: 0;
+  padding-top: 231px;
+  @include fonts(700, 80px, 94px);
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
+.start__text-par {
+  margin: 0;
+  padding-top: 51px;
+  position: relative;
+  font-family: "PT Mono", "Arial", sans-serif;
+  font-size: 22px;
+  line-height: 156.8%;
+  text-transform: lowercase;
+  padding-left: 66px;
+  max-width: 641px;
+
+  &::before {
+    content: '';
+    display: block;
+    width: 66px;
+    height: 2px;
+    position: absolute;
+    background: url("../../img/line.png");
+    left: 0px;
+    top: 68px;
+  }
+}
+
+.start__text-button-container {
+  padding-top: 53px;
+  padding-left: 94px;
+  display: flex;
+  flex-wrap: wrap;
+  padding-bottom: 278px;
+}
+
+.start__text-button {
+  @include fonts(700, 16px, 19px);
+  @include link($white);
+  background-color: $blue;
+  border: none;
+  padding: 18px 45px;
+  letter-spacing: 1px;
+}
+
+.start__scroll {
+  font-family: "PT Mono", "Arial", sans-serif;
+  font-size: 14px;
+  line-height: 15px;
+  opacity: 0.5;
+  width: 93px;
+  top: -127px;
+  left: -35px;
+  color: $white;
+  position: relative;
+  transform: rotate(-90deg);
 }
