--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -46,3 +46,20 @@
     padding-top: 20px;
   }
 }
+
+@media (max-width: $mobile) {
+  .page-header {
+    @include inner(767px, 15px);
+    padding-top: 17px;
+    padding-bottom: 17px;
+  }
+
+  .page-header__logo-img img {
+    width: 38px;
+    height: 38px;
+  }
+
+  .page-header__logo-text {
+    display: none;
+  }
+}
