--- a/source/sass/blocks/adv.scss
+++ b/source/sass/blocks/adv.scss
@@ -1,7 +1,7 @@
 .adv {
   max-width: 1170px;
   padding-top: 110px;
-  padding-bottom: 55px;
+  padding-bottom: 25px;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
@@ -62,11 +62,12 @@
   .adv {
     @include inner(1023px, 25px);
     padding-top: 54px;
-    padding-bottom: 27px;
+    padding-bottom: 15px;
+    justify-content: space-between;
   }
 
   .adv__items {
-    max-width: 345px;
+    width: 342px;
     padding-top: 25px;
     padding-bottom: 25px;
     margin-bottom: 30px;
@@ -85,7 +86,16 @@
   .adv {
     @include inner(767px, 15px);
     padding-top: 37px;
-    padding-bottom: 27px;
+    padding-bottom: 10px;
+    justify-content: space-around;
+    flex-basis: auto;
+  }
+
+  .adv__items {
+    min-width: 290px;
+    margin-bottom: 20px;
+    margin-right: 30px;
+    margin-left: 30px;
   }
 
   .adv__items h3 {
