--- a/source/sass/utils.scss
+++ b/source/sass/utils.scss
@@ -33,11 +33,9 @@ hr {
 }
 
 .main-pic-container {
-  background: $white url("../../img/bg-white.png") no-repeat center;
+  background: $white url("../../img/bg-white.png") repeat;
   background-size: cover;
   width: 100%;
-  // min-height: 878px;
-  // z-index: -1;
 }
 
 .button {
