--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -11,24 +11,23 @@
 .footer__about {
   margin: 0 auto;
   max-width: 1410px;
-  padding: 65px 0;
+  padding: 65px 0 58px;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
 }
 
 .footer__about-main {
-  width: 17%;
+  max-width: 220px;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  justify-content: space-between;
 }
 
 .footer__logo {
   @include link($white);
   display: flex;
-  margin-bottom: 53px;
+  margin-bottom: 45px;
   // padding-right: 20px;
   width: 218px;
 }
@@ -39,7 +38,7 @@
 
 .footer__logo-text {
   margin-top: 4px;
-  margin-left: 16px;
+  margin-left: 17px;
   display: flex;
   flex-direction: column;
 }
@@ -59,7 +58,11 @@
 
 .footer__social_fb,
 .footer__social_ok {
-  padding-right: 5px;
+  padding-right: 8px;
+}
+
+.footer__about-site {
+  margin-right: 20px;
 }
 
 .footer__about-site p,
@@ -70,7 +73,7 @@
   text-transform: uppercase;
   margin-block-start: 0;
   margin-block-end: 0;
-  margin-bottom: 29px;
+  margin-bottom: 24px;
 }
 
 .footer__about-site p {
@@ -95,10 +98,10 @@
   line-height: 25px;
   color: $gray-black;
   opacity: 0.5;
-  letter-spacing: 0.03em;
+  // letter-spacing: 0.03em;
 
   &:not(:first-child) {
-    padding-left: 65px;
+    padding-left: 75px;
   }
 }
 
@@ -142,11 +145,12 @@
 
 .copyright-container p {
   margin-block-end: 0;
+  margin-right: 8px;
 }
 
 .footer__copyright-conf {
   margin-top: 1em;
-  width: 33%;
+  width: 34%;
   text-align: left;
   display: block;
 }
