--- a/source/sass/blocks/goods.scss
+++ b/source/sass/blocks/goods.scss
@@ -1,6 +1,6 @@
 .goods {
-  padding-top: 93px;
-  padding-bottom: 127px;
+  padding-top: 89px;
+  padding-bottom: 117px;
   background-color: $gray-black;
 }
 
@@ -18,7 +18,7 @@
 
 .goods__items {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   flex-wrap: wrap;
 }
 
@@ -27,18 +27,24 @@
   color: $white;
   margin-block-start: 0;
   margin-block-end: 0;
-  padding-left: 44px;
+  padding-left: 47px;
   width: 160px;
   padding-bottom: 20px;
 }
 
 .goods__item {
   @include link($white);
-  width: 31.7%;
-  min-height: 620px;
+  min-width: 370px;
+  min-height: 550px;
   position: relative;
   padding-top: 53px;
   padding-bottom: 20px;
+  margin-left: 30px;
+  margin-bottom: 10px;
+
+  &:first-child {
+    margin-left: 0;
+  }
 
   &_produce {
     background: url("../../img/pic-1.png") no-repeat;
