--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -30,7 +30,7 @@
   font-size: 16px;
   line-height: 18px;
   color: $white;
-  margin-left: 122px;
+  margin-left: 127px;
 
   &::before {
     content: "";
@@ -49,8 +49,9 @@
   @include link($white);
   background-color: transparent;
   border: 1px solid $white;
-  padding: 14px 27px;
-  margin-left: 49px;
+  letter-spacing: 0.05em;
+  padding: 14px 26px;
+  margin-left: 44px;
 }
 
 @media (max-width: $tablet) {
