--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -1,9 +1,9 @@
 .modal {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   background-color: rgba(000, 000, 000, 0.5);
   overflow: hidden;
-  position: absolute;
+  position: fixed;
   top: 0;
   z-index: 3;
 }
@@ -26,7 +26,7 @@
 
 .modal__close {
   position: absolute;
-  right: 5px;
+  right: 25px;
   top: 20px;
   width: 25px;
   height: 25px;
@@ -38,6 +38,8 @@
     content: "";
     height: 16px;
     width: 1px;
+    left: 12px;
+    top: 3px;
     background-color: $white;
   }
 
