--- a/source/sass/blocks/question.scss
+++ b/source/sass/blocks/question.scss
@@ -1,6 +1,6 @@
 .question {
-  padding-top: 96px;
-  padding-bottom: 113px;
+  padding-top: 92px;
+  padding-bottom: 109px;
   background: url("../../img/bg-form.png") no-repeat;
   background-size: cover;
 }
@@ -11,7 +11,6 @@
 }
 
 .question__about {
-  width: inherit;
   padding-left: 50%;
 }
 
@@ -19,7 +18,8 @@
   @include fonts(400, 36px, 140.6%);
   color: $white;
   margin-block-start: 0;
-  margin-block-end: 7px;
+  margin-block-end: 9px;
+  padding-left: 15px;
 }
 
 .question__about p {
@@ -28,7 +28,12 @@
   line-height: 134.4%;
   color: $white;
   margin-block-start: 0;
-  margin-block-end: 49px;
+  margin-block-end: 50px;
+  padding-left: 20px;
+}
+
+.question__form {
+  padding-left: 20px;
 }
 
 .form__inputs {
@@ -41,13 +46,13 @@
   font-family: "PT Mono", "Arial", sans-serif;
   font-size: 16px;
   line-height: 134.4%;
-  width: 238px;
+  width: 237px;
   border: 0;
   background-color: #19baff;
   opacity: 0.9;
   padding: 14px 16px;
   margin-bottom: 40px;
-  margin-right: 31px;
+  margin-right: 25px;
 
   &:nth-child(2n) {
     margin-right: 0;
@@ -67,10 +72,10 @@
   background-color: #19baff;
   opacity: 0.9;
   padding: 14px 16px;
-  width: 93%;
+  width: 93.5%;
   height: 154px;
   resize: none;
-  margin-bottom: 43px;
+  margin-bottom: 9px;
 }
 
 .form__textarea::placeholder {
@@ -88,7 +93,7 @@
   @include link($white);
   @include fonts(700, 14px, 16px);
   letter-spacing: 0.05em;
-  padding: 14px 80px;
+  padding: 14px 79px;
   background-color: transparent;
   border: 1px solid $white;
   border-radius: 5px;
@@ -120,12 +125,12 @@
     visibility: visible;
     position: absolute;
     content: "";
-    width: 16px;
-    height: 16px;
+    width: 15px;
+    height: 15px;
     background-color: transparent;
     border: 1px solid #e5e5e5;
-    top: -25px;
-    left: -210px;
+    top: -28px;
+    left: -200px;
     cursor: pointer;
   }
 
@@ -136,8 +141,8 @@
       content: "";
       width: 8px;
       height: 5px;
-      top: -20px;
-      left: -205px;
+      top: -21px;
+      left: -196px;
       background: url("../../img/check.png") no-repeat 0 0;
     }
   }
