--- a/source/sass/blocks/adv.scss
+++ b/source/sass/blocks/adv.scss
@@ -75,38 +75,109 @@
   }
 
   .adv__items {
-    width: 342px;
-    padding-top: 25px;
-    padding-bottom: 25px;
-    margin-bottom: 30px;
+    width: 345px;
+    min-height: 185px;
+    padding-top: 24px;
+    padding-bottom: 24px;
+    margin-bottom: 31px;
   }
 
   .adv__items_time,
   .adv__items_vendor,
   .adv__items_conf,
   .adv__items_price {
-    padding-right: 25px;
-    padding-left: 25px;
+    padding-right: 27px;
+    padding-left: 22px;
+  }
+
+  .adv__items svg {
+    margin-block-start: 0;
+    margin-block-end: 0;
+  }
+
+  .adv__items h3 {
+    margin-block-end: 15px;
+  }
+
+  .adv__items_vendor svg {
+    width: 32px;
+    height: 32px;
+    margin-block-end: 2px;
+  }
+
+  .adv__items_vendor h3 {
+    margin-block-end: 12px;
+  }
+
+  .adv__items_conf svg {
+    width: 30px;
+    height: 26px;
+  }
+
+  .adv__items_conf h3 {
+    margin-block-end: 17px;
+  }
+
+  .adv__items_price svg {
+    width: 32px;
+    height: 32px;
+    margin-block-end: 4px;
+  }
+
+  .adv__items_price h3 {
+    margin-block-end: 10px;
   }
 }
 
 @media (max-width: $mobile) {
   .adv {
     @include inner(767px, 15px);
-    padding-top: 37px;
-    padding-bottom: 10px;
+    padding-top: 38px;
+    padding-bottom: 20px;
     justify-content: space-around;
     flex-basis: auto;
   }
 
   .adv__items {
     min-width: 290px;
-    margin-bottom: 20px;
-    margin-right: 30px;
-    margin-left: 30px;
+    margin-bottom: 22px;
+    padding-bottom: 27px;
+    min-height: 150px;
+  }
+
+  .adv__items_time,
+  .adv__items_conf,
+  .adv__items_price {
+    padding-right: 19px;
+    padding-left: 22px;
+  }
+
+  .adv__items_vendor {
+    padding-right: 10px;
+  }
+
+  .adv__items svg {
+    margin-block-start: 0;
+    margin-block-end: 5px;
+  }
+
+  .adv__items_vendor svg {
+    width: 32px;
+    height: 32px;
+    margin-block-end: 9px;
   }
 
   .adv__items h3 {
+    max-width: 234px;
     font-size: 20px;
+    margin-block-end: 11px;
+  }
+
+  .adv__items_conf h3 {
+    margin-block-end: -5px;
+  }
+
+  .adv__items_conf {
+    padding-bottom: 25px;
   }
 }
