--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -3,9 +3,6 @@
   bottom: 0;
   width: 100%;
   height: 317px;
-  // display: flex;
-  // flex-direction: column;
-  // // justify-content: space-between;
 }
 
 .footer__about {
@@ -28,13 +25,8 @@
   @include link($white);
   display: flex;
   margin-bottom: 45px;
-  // padding-right: 20px;
   width: 218px;
 }
-
-// .footer__logo-img img {
-//   width: 100%;
-// }
 
 .footer__logo-text {
   margin-top: 4px;
@@ -76,13 +68,6 @@
   margin-bottom: 24px;
 }
 
-.footer__about-site p {
-  // padding-left: 65px;
-  // margin-right: 150px;
-  // display: inline-block;
-  // width: 35%;
-}
-
 .footer__items {
   display: flex;
   flex-wrap: wrap;
@@ -98,7 +83,6 @@
   line-height: 25px;
   color: $gray-black;
   opacity: 0.5;
-  // letter-spacing: 0.03em;
 
   &:not(:first-child) {
     padding-left: 75px;
@@ -163,17 +147,104 @@
   .footer__about {
     @include inner(1023px, 25px);
     padding-top: 20px;
+    justify-content: space-between;
+    padding-bottom: 36px;
+  }
+
+  .footer__about-main {
+    min-width: 100%;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-bottom: 20px;
+  }
+
+  .footer__about-main .copyright-container  {
+    &:first-child {
+      display: none;
+    }
+  }
+
+  .footer__social {
+    padding-top: 10px;
+  }
+
+  .footer__logo {
+    margin-bottom: 0;
+  }
+
+  .footer__about-site {
+    padding-top: 35px;
+    width: 50%;
+    margin-right: 0;
+  }
+
+  .footer__items {
+    flex-direction: column;
+  }
+
+  .footer__items ul {
+    &:not(:first-child) {
+      padding-left: 0;
+    }
+  }
+
+  .footer__about-contacts {
+    width: 48%;
+    padding-top: 35px;
   }
 
   .footer__copyright {
     @include inner(1023px, 25px);
+    padding-top: 3px;
+    padding-bottom: 20px;
+  }
+
+  .footer__copyright .copyright-container {
+    display: none;
   }
 }
 
 @media (max-width: $mobile) {
+  .footer__about {
+    @include inner(767px, 15px);
+    padding-top: 50px;
+    justify-content: space-between;
+    flex-direction: column;
+  }
+
+  .footer__about-main {
+    min-width: 100%;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 20px;
+  }
+
+  .footer__about-site {
+    padding-top: 35px;
+    width: 100%;
+    margin-right: 0;
+  }
+
+  .footer__about-contacts {
+    width: 100%;
+    padding-top: 35px;
+  }
+
+  .footer__contact {
+    padding-right: 73px;
+  }
+
   .footer__copyright {
     @include inner(767px, 15px);
     padding-top: 20px;
     flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    padding-bottom: 30px;
+  }
+
+  .footer__copyright-conf {
+    width: 217px;
   }
 }
