--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -1,11 +1,10 @@
 .modal {
-  width: 100%;
+  min-width: 100%;
   min-height: 100%;
   background-color: rgba(000, 000, 000, 0.5);
   overflow: hidden;
   position: fixed;
   top: 0;
-  left: 3px;
   z-index: 3;
 }
 
@@ -18,10 +17,11 @@
   padding: 31px 39px;
   background: $blue;
   top: 136px;
+  left: 3px;
   z-index: 4;
 }
 
-.modal_no-js {
+.modal_hide {
   display: none;
 }
 
@@ -52,6 +52,7 @@
   opacity: 0.9;
   padding: 16px 24px;
   margin-bottom: 29px;
+  color: $white;
 }
 
 .modal__input::placeholder {
@@ -142,13 +143,14 @@
   }
 }
 
-.modal__close {
+.modal__closed {
   position: absolute;
   right: 25px;
   top: 18px;
   width: 20px;
   height: 20px;
   opacity: 1;
+  cursor: pointer;
 
   &::before,
   &::after {
