--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -45,12 +45,19 @@
     @include inner(1023px, 25px);
     padding-top: 20px;
   }
+
+  .page-header__logo-text {
+    margin-top: 6px;
+    margin-left: 17px;
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 @media (max-width: $mobile) {
   .page-header {
     @include inner(767px, 15px);
-    padding-top: 17px;
+    padding-top: 18px;
     padding-bottom: 17px;
   }
 
