--- a/source/sass/blocks/question.scss
+++ b/source/sass/blocks/question.scss
@@ -151,14 +151,14 @@
 @media (max-width: $tablet) {
   .question {
     @include inner(1023px, 25px);
-    padding-top: 83px;
-    padding-bottom: 103px;
+    padding-top: 80px;
+    padding-bottom: 99px;
     background-image: none;
     background-color: $blue;
   }
 
   .question__wrapper {
-    max-width: 591px;
+    max-width: 622px;
     margin: 0 auto;
   }
 
@@ -169,37 +169,60 @@
   .question__about h2 {
     @include fonts(400, 32px, 140.6%);
     margin-block-start: 0;
-    margin-block-end: 15px;
+    margin-block-end: 18px;
   }
 
   .question__about p {
     font-family: "PT Mono", "Arial", sans-serif;
-    margin-block-end: 51px;
+    margin-block-end: 54px;
+  }
+
+  .question__form {
+    padding-right: 14px;
   }
 
   .form__input {
     width: 244px;
     border: 0;
     padding: 14px 17px;
-    margin-bottom: 40px;
+    margin-bottom: 43px;
   }
 
   .form__textarea {
     padding: 14px 17px;
     width: 94%;
-    height: 159px;
-    margin-bottom: 44px;
+    height: 132px;
+    margin-bottom: 38px;
   }
 
   .form__button {
-    padding: 14px 85px;
+    padding: 14px 84px;
+  }
+
+  .form__checkbox {
+    display: inline-block;
+    max-width: 230px;
+    min-height: 32px;
+    line-height: 15px;
+    padding-right: 7px;
+  }
+
+  .form__checkbox_input::before {
+    left: -208px;
+  }
+
+  .form__checkbox_input:checked {
+    &::after {
+      top: -23px;
+      left: -204px;
+    }
   }
 }
 
 @media (max-width: $mobile) {
   .question {
     @include inner(767px, 15px);
-    padding-top: 33px;
+    padding-top: 30px;
     padding-bottom: 41px;
   }
 
@@ -212,21 +235,25 @@
     @include fonts(400, 28px, 140.6%);
     margin-block-start: 0;
     margin-block-end: 16px;
+    padding-left: 0;
   }
 
   .question__about p {
     margin-block-end: 25px;
+    padding-left: 0;
   }
 
   .question__form {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding-left: 0;
   }
 
   .form__inputs {
     margin: 0 auto;
     flex-direction: column;
+    margin-bottom: 5px;
   }
 
   .form__input {
@@ -241,8 +268,8 @@
     margin: 0 auto;
     padding: 14px 17px;
     width: 256px;
-    height: 159px;
-    margin-bottom: 30px;
+    height: 75px;
+    margin-bottom: 32px;
   }
 
   .form__button-wrapper {
@@ -250,9 +277,9 @@
   }
 
   .form__button {
-    max-width: 290px;
-    padding: 14px 89px;
-    margin-bottom: 30px;
+    width: 290px;
+    padding: 14px 82px;
+    margin-bottom: 31px;
     font-size: 14px;
   }
 
