--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -252,7 +252,7 @@
     position: relative;
   }
 
-  .acc__items {
+  .accordeon__items {
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.3s ease-out;
