--- a/source/sass/utils.scss
+++ b/source/sass/utils.scss
@@ -25,7 +25,7 @@ hr {
 }
 
 .pic-container {
-  background: $dark-gray url("../../img/bg-main.png") no-repeat center;
+  background: $dark-gray url("../../img/bg-main.jpg") no-repeat center;
   background-size: cover;
   width: 100%;
   z-index: -1;
@@ -45,7 +45,7 @@ hr {
 
 @media (max-width: $tablet) {
   .pic-container {
-    background: $dark-gray url("../../img/bg-main-tablet.png") no-repeat center;
+    background: $dark-gray url("../../img/bg-main-tablet.jpg") no-repeat center;
     background-size: cover;
     min-height: 520px;
   }
@@ -53,7 +53,7 @@ hr {
 
 @media (max-width: $mobile) {
   .pic-container {
-    background: $dark-gray url("../../img/bg-main-mobile.png") no-repeat center;
+    background: $dark-gray url("../../img/bg-main-mobile.jpg") no-repeat center;
     background-size: cover;
     min-height: 647px;
   }
