--- a/source/sass/blocks/question.scss
+++ b/source/sass/blocks/question.scss
@@ -1,7 +1,7 @@
 .question {
   padding-top: 92px;
   padding-bottom: 109px;
-  background: url("../../img/bg-form.png") no-repeat;
+  background: url("../../img/bg-form.jpg") no-repeat;
   background-size: cover;
 }
 
