--- a/source/sass/blocks/adv.scss
+++ b/source/sass/blocks/adv.scss
@@ -1,37 +1,24 @@
 .adv {
-  max-width: 1172px;
+  max-width: 1176px;
   padding-top: 112px;
   padding-bottom: 40px;
   margin: 0 auto;
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   flex-wrap: wrap;
-  align-content: stretch;
 }
 
 .adv__items {
   position: relative;
   left: 3px;
-  max-width: 570px;
+  max-width: 480px;
   min-height: 232px;
   background: $white;
   outline: 1px solid #ebebeb;
   border-left: 3px solid $blue;
-  padding-top: 40px;
-  padding-bottom: 27px;
+  padding: 40px 47px 27px 43px;
   margin-bottom: 30px;
-}
-
-.adv__items_time,
-.adv__items_vendor,
-.adv__items_conf,
-.adv__items_price {
-  padding-right: 45px;
-  padding-left: 45px;
-}
-
-.adv__items_conf {
-  padding-top: 5px;
 }
 
 .adv__items svg {
@@ -70,61 +57,23 @@
   .adv {
     @include inner(1023px, 25px);
     padding-top: 54px;
-    padding-bottom: 15px;
-    justify-content: space-between;
+    padding-bottom: 13px;
+    padding-right: 25px;
   }
 
   .adv__items {
-    width: 345px;
+    width: 297px;
     min-height: 185px;
-    padding-top: 24px;
-    padding-bottom: 24px;
+    padding: 24px 20px 24px 22px;
     margin-bottom: 31px;
-  }
-
-  .adv__items_time,
-  .adv__items_vendor,
-  .adv__items_conf,
-  .adv__items_price {
-    padding-right: 27px;
-    padding-left: 22px;
   }
 
   .adv__items svg {
     margin-block-start: 0;
-    margin-block-end: 0;
-  }
-
-  .adv__items h3 {
-    margin-block-end: 15px;
-  }
-
-  .adv__items_vendor svg {
-    width: 32px;
-    height: 32px;
     margin-block-end: 2px;
   }
 
-  .adv__items_vendor h3 {
-    margin-block-end: 12px;
-  }
-
-  .adv__items_conf svg {
-    width: 30px;
-    height: 26px;
-  }
-
-  .adv__items_conf h3 {
-    margin-block-end: 17px;
-  }
-
-  .adv__items_price svg {
-    width: 32px;
-    height: 32px;
-    margin-block-end: 4px;
-  }
-
-  .adv__items_price h3 {
+  .adv__items h3 {
     margin-block-end: 10px;
   }
 }
@@ -135,25 +84,19 @@
     padding-top: 38px;
     padding-bottom: 20px;
     justify-content: space-around;
-    flex-basis: auto;
   }
 
   .adv__items {
-    min-width: 290px;
-    margin-bottom: 22px;
-    padding-bottom: 27px;
+    min-width: 246px;
+    margin-bottom: 23px;
+    padding-bottom: 29px;
     min-height: 150px;
-  }
-
-  .adv__items_time,
-  .adv__items_conf,
-  .adv__items_price {
     padding-right: 19px;
     padding-left: 22px;
-  }
 
-  .adv__items_vendor {
-    padding-right: 10px;
+    &:nth-child(3) {
+      padding-right: 10px;
+    }
   }
 
   .adv__items svg {
@@ -161,23 +104,9 @@
     margin-block-end: 5px;
   }
 
-  .adv__items_vendor svg {
-    width: 32px;
-    height: 32px;
-    margin-block-end: 9px;
-  }
-
   .adv__items h3 {
     max-width: 234px;
     font-size: 20px;
     margin-block-end: 11px;
-  }
-
-  .adv__items_conf h3 {
-    margin-block-end: -5px;
-  }
-
-  .adv__items_conf {
-    padding-bottom: 25px;
   }
 }
