--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -7,7 +7,7 @@
 
 .footer__about {
   margin: 0 auto;
-  max-width: 1410px;
+  max-width: 1412px;
   padding: 65px 0 58px;
   display: flex;
   justify-content: space-between;
@@ -46,6 +46,10 @@
   line-height: 14px;
   color: $gray;
   text-transform: lowercase;
+}
+
+.footer__social a {
+  @include link($white);
 }
 
 .footer__social_fb,
@@ -89,6 +93,10 @@
   }
 }
 
+.footer__items a {
+  @include link($gray-black);
+}
+
 .footer__about-contacts {
   width: 333px;
 }
@@ -117,7 +125,8 @@
   font-size: 13px;
   line-height: 24px;
   letter-spacing: 0.04em;
-  margin-bottom: 1em;
+  padding-top: 13px;
+  padding-bottom: 13px;
 }
 
 .copyright-container {
@@ -128,12 +137,14 @@
 }
 
 .copyright-container p {
+  margin-top: 0;
   margin-block-end: 0;
   margin-right: 8px;
 }
 
 .footer__copyright-conf {
-  margin-top: 1em;
+  @include link($gray-black);
+  margin-top: 0;
   width: 34%;
   text-align: left;
   display: block;
@@ -141,6 +152,7 @@
 
 .footer__copyright p {
   margin-block-end: 0;
+  margin-top: 0;
 }
 
 @media (max-width: $tablet) {
@@ -201,7 +213,7 @@
 
   .footer__copyright {
     @include inner(1023px, 25px);
-    padding-top: 8px;
+    padding-top: 20px;
     padding-bottom: 20px;
   }
 
@@ -306,7 +318,7 @@
 
   .footer__copyright {
     @include inner(767px, 15px);
-    padding-top: 13px;
+    padding-top: 25px;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
@@ -315,7 +327,7 @@
 
   .footer__copyright-conf {
     width: 217px;
-    padding-bottom: 9px;
+    padding-bottom: 20px;
   }
 
   .copyright-container p {
