--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -6,9 +6,9 @@
   justify-content: space-between;
   flex-wrap: wrap;
   margin: 0 auto;
-  padding-top: 30px;
+  padding-top: 33px;
   z-index: 2;
-  padding-bottom: 30px;
+  padding-bottom: 33px;
 }
 
 .page-header__logo {
@@ -17,7 +17,7 @@
 }
 
 .page-header__logo-text {
-  margin-top: 10px;
+  margin-top: 7px;
   margin-left: 19px;
   display: flex;
   flex-direction: column;
@@ -37,7 +37,22 @@
 }
 
 .page-header__burger {
-  width: 10%;
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  cursor: pointer;
+
+  .burger-line {
+    width: 37px;
+    height: 1px;
+    background-color: $white;
+    display: block;
+
+
+    &:last-child {
+      margin-top: 11px;
+    }
+  }
 }
 
 @media (max-width: $tablet) {
@@ -61,7 +76,7 @@
     padding-bottom: 17px;
   }
 
-  .page-header__logo-img img {
+  .page-header__logo img {
     width: 38px;
     height: 38px;
   }
