--- a/source/sass/blocks/start.scss
+++ b/source/sass/blocks/start.scss
@@ -2,7 +2,7 @@
   margin: 0 auto;
   max-width: 1410px;
   padding-top: 196px;
-  padding-bottom: 260px;
+  padding-bottom: 262px;
 }
 
 .start__text {
@@ -56,11 +56,9 @@
   letter-spacing: 0.05em;
 }
 
-.start__text-button_mobile {
-  display: none;
-}
-
 .start__scroll {
+  @include link($white);
+  display: block;
   font-family: "PT Mono", "Arial", sans-serif;
   font-size: 14px;
   line-height: 15px;
@@ -73,14 +71,10 @@
   transform: rotate(-90deg);
 }
 
-.start__scroll a {
-  @include link($white);
-}
-
 @media (max-width: $tablet) {
   .start {
     @include inner(1023px, 25px);
-    padding-top: 108px;
+    padding-top: 116px;
     padding-bottom: 163px;
   }
 
@@ -97,7 +91,6 @@
   .start__text p {
     font-size: 18px;
     padding-left: 48px;
-    // max-width: 613px;
     margin-bottom: 55px;
 
     &::before {
@@ -127,7 +120,7 @@
 @media (max-width: $mobile) {
   .start {
     @include inner(767px, 15px);
-    padding-top: 205px;
+    padding-top: 214px;
     padding-bottom: 70px;
   }
 
@@ -138,15 +131,15 @@
 
   .start__text h1 {
     @include fonts(700, 40px, 47px);
-    margin-bottom: 28px;
-    max-width: 220px;
+    margin-bottom: 27px;
+    min-width: 220px;
   }
 
   .start__text p {
     font-size: 16px;
     padding-left: 50px;
-    max-width: 245px;
-    margin-bottom: 42px;
+    min-width: 245px;
+    margin-bottom: 41px;
 
     &::before {
       left: 2px;
@@ -160,11 +153,6 @@
   }
 
   .start__text-button {
-    display: none;
-  }
-
-  .start__text-button_mobile {
-    display: block;
     padding: 18px 32px;
   }
 }
